--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "dependencies": {
     "express": "^4.17.1",
     "express-handlebars": "^3.1.0",
+    "mongoose": "^5.9.17",
     "uuid": "^8.1.0"
   },
   "devDependencies": {
